// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`handles initialValues specified as a function 1`] = `
Object {
  "form": Object {
    "errors": Object {},
    "formId": "form",
    "hasError": [Function],
    "hasVisited": [Function],
    "isPristine": true,
    "isSubmitting": false,
    "isTouched": [Function],
    "isValid": true,
    "isValidating": false,
    "origState": Object {
      "errors": Object {},
      "formId": "form",
      "hasError": [Function],
      "hasVisited": [Function],
      "isPristine": true,
      "isSubmitting": false,
      "isTouched": [Function],
      "isValid": true,
      "isValidating": false,
      "reset": [Function],
      "setErrors": [Function],
      "setFieldError": [Function],
      "setFieldTouched": [Function],
      "setFieldValue": [Function],
      "setFieldVisited": [Function],
      "setInitialValues": [Function],
      "setTouched": [Function],
      "setValues": [Function],
      "submit": [Function],
      "submitCount": 0,
      "touched": Object {},
      "validate": [Function],
      "values": Object {
        "some": "stuff",
      },
      "visited": Object {},
    },
    "reset": [Function],
    "setErrors": [Function],
    "setFieldError": [Function],
    "setFieldTouched": [Function],
    "setFieldValue": [Function],
    "setFieldVisited": [Function],
    "setInitialValues": [Function],
    "setTouched": [Function],
    "setValues": [Function],
    "submit": [Function],
    "submitCount": 0,
    "touched": Object {},
    "validate": [Function],
    "values": Object {
      "some": "stuff",
    },
    "visited": Object {},
  },
}
`;

exports[`handles initialValues specified as prop 1`] = `
Object {
  "form": Object {
    "errors": Object {},
    "formId": "form",
    "hasError": [Function],
    "hasVisited": [Function],
    "isPristine": true,
    "isSubmitting": false,
    "isTouched": [Function],
    "isValid": true,
    "isValidating": false,
    "origState": Object {
      "errors": Object {},
      "formId": "form",
      "hasError": [Function],
      "hasVisited": [Function],
      "isPristine": true,
      "isSubmitting": false,
      "isTouched": [Function],
      "isValid": true,
      "isValidating": false,
      "reset": [Function],
      "setErrors": [Function],
      "setFieldError": [Function],
      "setFieldTouched": [Function],
      "setFieldValue": [Function],
      "setFieldVisited": [Function],
      "setInitialValues": [Function],
      "setTouched": [Function],
      "setValues": [Function],
      "submit": [Function],
      "submitCount": 0,
      "touched": Object {},
      "validate": [Function],
      "values": Object {
        "some": "stuff",
      },
      "visited": Object {},
    },
    "reset": [Function],
    "setErrors": [Function],
    "setFieldError": [Function],
    "setFieldTouched": [Function],
    "setFieldValue": [Function],
    "setFieldVisited": [Function],
    "setInitialValues": [Function],
    "setTouched": [Function],
    "setValues": [Function],
    "submit": [Function],
    "submitCount": 0,
    "touched": Object {},
    "validate": [Function],
    "values": Object {
      "some": "stuff",
    },
    "visited": Object {},
  },
}
`;

exports[`renders store id 1`] = `
<DocumentFragment>
  <form
    id="zzz.123"
  />
</DocumentFragment>
`;

exports[`should handle reset with no onReset 1`] = `
Object {
  "checkbox": false,
  "field1": "value1",
  "field2": "value2",
}
`;

exports[`should handle setValues using same values 1`] = `
Object {
  "checkbox": false,
  "field1": "value1",
  "field2": "value2",
}
`;

exports[`should render <Form> 1`] = `
<DocumentFragment>
  <form
    id="form"
  />
</DocumentFragment>
`;

exports[`should validate: prop match 1`] = `
Object {
  "element": Object {
    "id": "default.form.field1",
    "name": "default.form.field1",
    "onBlur": [Function],
    "onChange": [Function],
    "onFocus": [Function],
    "type": "text",
    "value": "value1",
  },
  "error": undefined,
  "form": Object {
    "errors": Object {},
    "formId": "form",
    "hasError": [Function],
    "hasVisited": [Function],
    "initialValues": Object {
      "checkbox": false,
      "field1": "value1",
      "field2": "value2",
    },
    "isPristine": true,
    "isSubmitting": false,
    "isTouched": [Function],
    "isValid": true,
    "isValidating": false,
    "origState": Object {
      "errors": Object {},
      "formId": "form",
      "hasError": [Function],
      "hasVisited": [Function],
      "isPristine": true,
      "isSubmitting": false,
      "isTouched": [Function],
      "isValid": true,
      "isValidating": false,
      "reset": [Function],
      "setErrors": [Function],
      "setFieldError": [Function],
      "setFieldTouched": [Function],
      "setFieldValue": [Function],
      "setFieldVisited": [Function],
      "setInitialValues": [Function],
      "setTouched": [Function],
      "setValues": [Function],
      "submit": [Function],
      "submitCount": 0,
      "touched": Object {},
      "validate": [Function],
      "values": Object {
        "checkbox": false,
        "field1": "value1",
        "field2": "value2",
      },
      "visited": Object {},
    },
    "reset": [Function],
    "setErrors": [Function],
    "setFieldError": [Function],
    "setFieldTouched": [Function],
    "setFieldValue": [Function],
    "setFieldVisited": [Function],
    "setInitialValues": [Function],
    "setTouched": [Function],
    "setValues": [Function],
    "submit": [Function],
    "submitCount": 0,
    "touched": Object {},
    "validate": [Function],
    "values": Object {
      "checkbox": false,
      "field1": "value1",
      "field2": "value2",
    },
    "visited": Object {},
  },
  "setError": [Function],
  "setTouched": [Function],
  "setValue": [Function],
  "setVisited": [Function],
  "touched": false,
  "visited": false,
}
`;

exports[`should validate: prop match 2`] = `
Object {
  "element": Object {
    "id": "default.form.field1",
    "name": "default.form.field1",
    "onBlur": [Function],
    "onChange": [Function],
    "onFocus": [Function],
    "type": "text",
    "value": "123",
  },
  "error": undefined,
  "form": Object {
    "errors": Object {},
    "formId": "form",
    "hasError": [Function],
    "hasVisited": [Function],
    "initialValues": Object {
      "checkbox": false,
      "field1": "value1",
      "field2": "value2",
    },
    "isPristine": false,
    "isSubmitting": false,
    "isTouched": [Function],
    "isValid": true,
    "isValidating": true,
    "origState": Object {
      "errors": Object {},
      "formId": "form",
      "hasError": [Function],
      "hasVisited": [Function],
      "isPristine": true,
      "isSubmitting": false,
      "isTouched": [Function],
      "isValid": true,
      "isValidating": false,
      "reset": [Function],
      "setErrors": [Function],
      "setFieldError": [Function],
      "setFieldTouched": [Function],
      "setFieldValue": [Function],
      "setFieldVisited": [Function],
      "setInitialValues": [Function],
      "setTouched": [Function],
      "setValues": [Function],
      "submit": [Function],
      "submitCount": 0,
      "touched": Object {},
      "validate": [Function],
      "values": Object {
        "checkbox": false,
        "field1": "value1",
        "field2": "value2",
      },
      "visited": Object {},
    },
    "reset": [Function],
    "setErrors": [Function],
    "setFieldError": [Function],
    "setFieldTouched": [Function],
    "setFieldValue": [Function],
    "setFieldVisited": [Function],
    "setInitialValues": [Function],
    "setTouched": [Function],
    "setValues": [Function],
    "submit": [Function],
    "submitCount": 0,
    "touched": Object {},
    "validate": [Function],
    "values": Object {
      "checkbox": false,
      "field1": "123",
      "field2": "value2",
    },
    "visited": Object {},
  },
  "setError": [Function],
  "setTouched": [Function],
  "setValue": [Function],
  "setVisited": [Function],
  "touched": false,
  "visited": false,
}
`;

exports[`should validate: prop match 3`] = `
Object {
  "element": Object {
    "id": "default.form.field1",
    "name": "default.form.field1",
    "onBlur": [Function],
    "onChange": [Function],
    "onFocus": [Function],
    "type": "text",
    "value": "123",
  },
  "error": undefined,
  "form": Object {
    "errors": Object {},
    "formId": "form",
    "hasError": [Function],
    "hasVisited": [Function],
    "initialValues": Object {
      "checkbox": false,
      "field1": "value1",
      "field2": "value2",
    },
    "isPristine": false,
    "isSubmitting": false,
    "isTouched": [Function],
    "isValid": true,
    "isValidating": false,
    "origState": Object {
      "errors": Object {},
      "formId": "form",
      "hasError": [Function],
      "hasVisited": [Function],
      "isPristine": true,
      "isSubmitting": false,
      "isTouched": [Function],
      "isValid": true,
      "isValidating": false,
      "reset": [Function],
      "setErrors": [Function],
      "setFieldError": [Function],
      "setFieldTouched": [Function],
      "setFieldValue": [Function],
      "setFieldVisited": [Function],
      "setInitialValues": [Function],
      "setTouched": [Function],
      "setValues": [Function],
      "submit": [Function],
      "submitCount": 0,
      "touched": Object {},
      "validate": [Function],
      "values": Object {
        "checkbox": false,
        "field1": "value1",
        "field2": "value2",
      },
      "visited": Object {},
    },
    "reset": [Function],
    "setErrors": [Function],
    "setFieldError": [Function],
    "setFieldTouched": [Function],
    "setFieldValue": [Function],
    "setFieldVisited": [Function],
    "setInitialValues": [Function],
    "setTouched": [Function],
    "setValues": [Function],
    "submit": [Function],
    "submitCount": 0,
    "touched": Object {},
    "validate": [Function],
    "values": Object {
      "checkbox": false,
      "field1": "123",
      "field2": "value2",
    },
    "visited": Object {},
  },
  "setError": [Function],
  "setTouched": [Function],
  "setValue": [Function],
  "setVisited": [Function],
  "touched": false,
  "visited": false,
}
`;

exports[`should validate: prop match 4`] = `
Object {
  "element": Object {
    "id": "default.form.field1",
    "name": "default.form.field1",
    "onBlur": [Function],
    "onChange": [Function],
    "onFocus": [Function],
    "type": "text",
    "value": "345",
  },
  "error": undefined,
  "form": Object {
    "errors": Object {},
    "formId": "form",
    "hasError": [Function],
    "hasVisited": [Function],
    "initialValues": Object {
      "checkbox": false,
      "field1": "value1",
      "field2": "value2",
    },
    "isPristine": false,
    "isSubmitting": false,
    "isTouched": [Function],
    "isValid": true,
    "isValidating": true,
    "origState": Object {
      "errors": Object {},
      "formId": "form",
      "hasError": [Function],
      "hasVisited": [Function],
      "isPristine": true,
      "isSubmitting": false,
      "isTouched": [Function],
      "isValid": true,
      "isValidating": false,
      "reset": [Function],
      "setErrors": [Function],
      "setFieldError": [Function],
      "setFieldTouched": [Function],
      "setFieldValue": [Function],
      "setFieldVisited": [Function],
      "setInitialValues": [Function],
      "setTouched": [Function],
      "setValues": [Function],
      "submit": [Function],
      "submitCount": 0,
      "touched": Object {},
      "validate": [Function],
      "values": Object {
        "checkbox": false,
        "field1": "value1",
        "field2": "value2",
      },
      "visited": Object {},
    },
    "reset": [Function],
    "setErrors": [Function],
    "setFieldError": [Function],
    "setFieldTouched": [Function],
    "setFieldValue": [Function],
    "setFieldVisited": [Function],
    "setInitialValues": [Function],
    "setTouched": [Function],
    "setValues": [Function],
    "submit": [Function],
    "submitCount": 0,
    "touched": Object {},
    "validate": [Function],
    "values": Object {
      "checkbox": false,
      "field1": "345",
      "field2": "value2",
    },
    "visited": Object {},
  },
  "setError": [Function],
  "setTouched": [Function],
  "setValue": [Function],
  "setVisited": [Function],
  "touched": false,
  "visited": false,
}
`;

exports[`should validate: prop match 5`] = `
Object {
  "element": Object {
    "id": "default.form.field1",
    "name": "default.form.field1",
    "onBlur": [Function],
    "onChange": [Function],
    "onFocus": [Function],
    "type": "text",
    "value": "345",
  },
  "error": undefined,
  "form": Object {
    "errors": Object {},
    "formId": "form",
    "hasError": [Function],
    "hasVisited": [Function],
    "initialValues": Object {
      "checkbox": false,
      "field1": "value1",
      "field2": "value2",
    },
    "isPristine": false,
    "isSubmitting": false,
    "isTouched": [Function],
    "isValid": true,
    "isValidating": false,
    "origState": Object {
      "errors": Object {},
      "formId": "form",
      "hasError": [Function],
      "hasVisited": [Function],
      "isPristine": true,
      "isSubmitting": false,
      "isTouched": [Function],
      "isValid": true,
      "isValidating": false,
      "reset": [Function],
      "setErrors": [Function],
      "setFieldError": [Function],
      "setFieldTouched": [Function],
      "setFieldValue": [Function],
      "setFieldVisited": [Function],
      "setInitialValues": [Function],
      "setTouched": [Function],
      "setValues": [Function],
      "submit": [Function],
      "submitCount": 0,
      "touched": Object {},
      "validate": [Function],
      "values": Object {
        "checkbox": false,
        "field1": "value1",
        "field2": "value2",
      },
      "visited": Object {},
    },
    "reset": [Function],
    "setErrors": [Function],
    "setFieldError": [Function],
    "setFieldTouched": [Function],
    "setFieldValue": [Function],
    "setFieldVisited": [Function],
    "setInitialValues": [Function],
    "setTouched": [Function],
    "setValues": [Function],
    "submit": [Function],
    "submitCount": 0,
    "touched": Object {},
    "validate": [Function],
    "values": Object {
      "checkbox": false,
      "field1": "345",
      "field2": "value2",
    },
    "visited": Object {},
  },
  "setError": [Function],
  "setTouched": [Function],
  "setValue": [Function],
  "setVisited": [Function],
  "touched": false,
  "visited": false,
}
`;

exports[`should validate: render match 1`] = `
<DocumentFragment>
  <form
    id="form"
  >
    <input
      id="default.form.field1"
      name="default.form.field1"
      type="text"
      value="value1"
    />
  </form>
</DocumentFragment>
`;

exports[`should validate: store match 1`] = `
Object {
  "form": Object {
    "errors": Object {},
    "formId": "form",
    "hasError": [Function],
    "hasVisited": [Function],
    "initialValues": Object {
      "checkbox": false,
      "field1": "value1",
      "field2": "value2",
    },
    "isPristine": true,
    "isSubmitting": false,
    "isTouched": [Function],
    "isValid": true,
    "isValidating": false,
    "origState": Object {
      "errors": Object {},
      "formId": "form",
      "hasError": [Function],
      "hasVisited": [Function],
      "isPristine": true,
      "isSubmitting": false,
      "isTouched": [Function],
      "isValid": true,
      "isValidating": false,
      "reset": [Function],
      "setErrors": [Function],
      "setFieldError": [Function],
      "setFieldTouched": [Function],
      "setFieldValue": [Function],
      "setFieldVisited": [Function],
      "setInitialValues": [Function],
      "setTouched": [Function],
      "setValues": [Function],
      "submit": [Function],
      "submitCount": 0,
      "touched": Object {},
      "validate": [Function],
      "values": Object {
        "checkbox": false,
        "field1": "value1",
        "field2": "value2",
      },
      "visited": Object {},
    },
    "reset": [Function],
    "setErrors": [Function],
    "setFieldError": [Function],
    "setFieldTouched": [Function],
    "setFieldValue": [Function],
    "setFieldVisited": [Function],
    "setInitialValues": [Function],
    "setTouched": [Function],
    "setValues": [Function],
    "submit": [Function],
    "submitCount": 0,
    "touched": Object {},
    "validate": [Function],
    "values": Object {
      "checkbox": false,
      "field1": "value1",
      "field2": "value2",
    },
    "visited": Object {},
  },
}
`;
